fix es for clj launch bat files and some bench scripts