@@ -1,6 +1,6 @@
 @echo off
-:: mcdonald.john.alan@gmail.com
-:: 2018-12-17
+:: wahpenayo (at) gmail (dot) com
+:: 2017-11-17
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
@@ -11,13 +11,6 @@ set COMPRESSED=
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-::set PROF=
-set PROF=-Xrunhprof:cpu=samples,depth=96,thread=y,doe=y
-
-::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
-set THRUPUT=-d64 -server
-::set THRUPUT=
-
 ::set XMX=-Xms29g -Xmx29g -Xmn11g 
 set XMX=-Xms12g -Xmx12g -Xmn5g 
 
@@ -25,6 +18,6 @@ set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% %THRUPUT% -ea %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
+set CMD=%JAVA% -ea %GC% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
 ::echo %CMD%
 %CMD%
