@@ -1,6 +1,6 @@
 @echo off
 :: wahpenayo (at) gmail (dot) com
-:: 2017-11-17
+:: 2025-09-23
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
@@ -11,22 +11,13 @@ set COMPRESSED=
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-set PROF=
-::set PROF=-Xrunhprof:cpu=samples,depth=128,thread=y,doe=y
-
-::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
-set THRUPUT=-d64 -server
-::set THRUPUT=
-
-set XMX=-Xms48g -Xmx48g -Xmn20g 
+set XMX=-Xms48g -Xmx48g -Xmn20g
 ::set XMX=-Xms12g -Xmx12g -Xmn5g 
 
 set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
-
-set JAVA_HOME=%JAVA9%
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
+set CMD=%JAVA% -ea -dsa -Xbatch %GC% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
 ::echo %CMD%
 %CMD%
